# Online_marketing_NN_token

./: .gitignore  Anchor Project  Anchor.toml  Cargo.toml  Conversion Optimization Metrics  DEVELOPERS_GUIDE.md  Next.js  No more split testing  README.md  React  React + TypeScript Frontend  Solana SPL Token Smart Contract (Rust) — Starter Template  Tailwind utility component code  UI  Web UI  containers  docker-compose.yaml  pyproject.toml  reward  router  s  t
Figma/: Figma
contracts/: Anchor.toml
contracts/anchor/: Anchor.toml  Cargo.toml  lib.rs
docs/: ai-creative-studio.md  anchor-project-structure.md  anchor-project.md  api-integrations.md  charting-containers.md  conversion-metrics-dashboard.md  conversion-optimization-metrics.md  dashboard-ui-design.md  developers.md  edge-box-ad-manager.md  emission-schedule.md  figma-dashboard-layout.md  investors.md  marketplace.md  nextjs-solana-ui.md  no-more-split-testing.md  nodal-network-webhosting.md  react-components-dashboard.md  react-typescript-frontend.md  real-time-optimization.md  real-time-routing-optimization.md  solana-spl-token-starter-template.md  spl-token-cpi-minting.md  tailwind-utility-components.md  tokenomics.md  ui-dashboard-ideas.md  ui-design.md  web-ui-anchor-integration.md  whitepaper.md
frontend/components/: ConversionChart.tsx  DashboardLayout.tsx  EngagementCards.tsx  KpiCard.tsx  PerformanceTable.tsx  StakePanel.tsx  WalletProvider.tsx  index.ts
frontend/utils/: anchor.ts
programs/dacit_program/: Cargo.toml
src/dacit/: __init__.py  cli.py  (+1 more)
tests/: dacit_tests.js  test_docs.py
(+2 files in other folders)
